# static-rdf-server

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  specification.yaml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  codeql.yaml  constraints.txt  coverage.yml  deploy-demo.yaml  deploy-nginx-prod&demo.yaml  deploy-nginx-staging.yaml  deploy-prod&demo.yaml  deploy-prod.yaml  deploy-server-prod&demo.yaml  deploy-server-staging.yaml  deploy-staging.yaml  upload-files-to-server.yml
deploy/base/: deployment-static-rdf.yaml  kustomization.yaml  service-static-rdf-nginx.yaml  service-static-rdf-server.yaml
deploy/demo/: kustomization.yaml  storage.yaml
deploy/prod/: kustomization.yaml  storage.yaml
deploy/staging/: kustomization.yaml  storage.yaml
e2e/: package-lock.json  package.json
e2e/cypress/e2e/: ontologies-specifications.cy.js  ontologies-vocabularies.cy.js  ontologies.cy.js  ontology-specification.cy.js  ontology-specification_with_version.cy.js  ontology-types.cy.js  ontology-vocabulary.cy.js  ontology.cy.js
nginx/: Dockerfile  nginx.conf
static_rdf_server/: __init__.py  app.py  gunicorn_config.py  utils.py
static_rdf_server/routes/: __init__.py  ontology.py  ontology_type.py  ping.py  ready.py  slash.py
static_rdf_server/utils/: __init__.py  config.py  utils.py
tests/: conftest.py
tests/contract/: test_create_ontology_type.py  test_delete_ontology.py  test_get_ontology.py  test_get_ontology_type.py  test_get_slash.py  test_ping.py  test_post_ontology.py  test_ready.py  test_specification.py  test_specification_with_version.py  test_upload_files.py  test_upload_ontology.py  test_vocabulary.py
tests/files/: .gitignore  index.html
tests/files/contract-test/hello-world-to-be-deleted/: hello-world-to-be-deleted-en.html
tests/files/examples/: index.html
tests/files/examples/hello-world/: hello-world-en.html  hello-world-nb.html  hello-world.html  hello-world.ttl  index.html
tests/files/input/: hello-world-en.html
tests/files/input/specifications/dcat-ap-no/: index.html
tests/files/input/specifications/dcat-ap-no_v1.1/: index.html
tests/files/input/vocabularies/audience-type/: audience-type-nb.html  audience-type.ttl  audience-type.xml
tests/files/workspace/data/contract-test/hello-world/: hello-world-en.html  hello-world.ttl
tests/files/workspace/data/contract-test/hello-world-to-be-deleted/: hello-world-to-be-deleted-en.html  hello-world-to-be-deleted-nn.html
tests/files/workspace/data/specifications/dcat-ap-no/: dcat-ap-no-nb.html
tests/files/workspace/data/specifications/dcat-ap-no/v1.1/: dcat-ap-no-nb.html
tests/files/workspace/data/vocabularies/audience-type/: audience-type-en.html  audience-type-nn.html  audience-type.ttl
tests/integration/: __init__.py  test_delete_ontology.py  test_get_ontology.py  test_get_ontology_type.py  test_get_slash.py  test_get_static_rdf_server.py  test_ping.py  test_put_ontology.py  test_put_ontology_type.py  test_put_static_rdf_server.py  test_ready.py  test_static_rdf_server.py
tests/unit/: __init__.py  test_utils.py
