[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
description = "A static web server for data.norge.no"
license = "Apache"
name = "static-rdf-server"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.13.0"
aiohttp-middlewares = "^2.4.0"
certifi = "^2025.10.5"
content-negotiation = "^1.1.2"
gunicorn = "^23.0.0"
multidict = "^6.7.0"
python = ">=3.12,<3.13"
python-dotenv = "^1.1.1"
python-json-logger = "^4.0.0"
rdflib = "^7.2.1"
pathvalidate = "^3.3.1"

[tool.poetry.group.dev.dependencies]
aiohttp-devtools = "^1.1"
black = "^25.9.0"
flake8 = "^7.3.0"
flake8-annotations = "^3.2.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.4.0"
flake8-bugbear = "^24.12.12"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-import-order = "^0.19.2"
mypy = "^1.18.2"
nox = "^2025.5.1"
nox-poetry = "^1.2.0"
pep8-naming = "^0.15.1"
pyfakefs = "^5.10.0"
pytest = "^8.4.2"
pytest-aiohttp = "^1.1.0"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-docker = "^3.2.3"
requests = "^2.32.5"
types-requests = "^2.32.4.20250913"

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "gunicorn.*",
  "pythonjsonlogger.*",
  "content_negotiation.*",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.8.5"]

[tool.coverage.paths]
source = ["static_rdf_server", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = [
  "*gunicorn_config.py",
]
source = ["static_rdf_server"]

[tool.coverage.report]
fail_under = 97
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
]
