[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
description = "A static web server for data.norge.no"
license = "Apache"
name = "static-rdf-server"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.13.5"
aiohttp-middlewares = "^2.4.0"
certifi = "^2026.2.25"
content-negotiation = "^2.1.0"
gunicorn = "^25.3.0"
multidict = "^6.7.1"
python = ">=3.12,<3.13"
python-dotenv = "^1.2.2"
python-json-logger = "^4.1.0"
rdflib = "^7.6.0"
pathvalidate = "^3.3.1"

[tool.poetry.group.dev.dependencies]
aiohttp-devtools = "^1.1.2"
black = "^26.3.1"
flake8 = "^7.3.0"
flake8-annotations = "^3.2.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.4.0"
flake8-bugbear = "^25.11.29"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-import-order = "^0.19.2"
mypy = "^1.20.0"
nox = "^2026.2.9"
nox-poetry = "^1.2.0"
pep8-naming = "^0.15.1"
pyfakefs = "^6.1.6"
pytest = "^9.0.2"
pytest-aiohttp = "^1.1.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
pytest-docker = "^3.2.5"
requests = "^2.33.1"
types-requests = "^2.33.0.20260402"

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "gunicorn.*",
  "pythonjsonlogger.*",
  "content_negotiation.*",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.3.2"]

[tool.coverage.paths]
source = ["static_rdf_server", "*/site-packages"]

[tool.coverage.run]
branch = false
omit = [
  "*gunicorn_config.py",
]
source = ["static_rdf_server"]

[tool.coverage.report]
fail_under = 97
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
  "asyncio: mark test as asyncio",
]
